Stocks: prevent store icons from stretching.

--- a/McMerchants/wwwroot/css/site.css
+++ b/McMerchants/wwwroot/css/site.css
@@ -118,6 +118,7 @@ body > div {
 
 .stocks-list li > img {
     margin-right: 10px;
+    max-height: 45px;
 }
 
 .stocks-list h3 {
